# SmallRpc

./: CMakeLists.txt  README
client/: Procedures.cpp  Procedures.h  RpcConnection.cpp  RpcConnection.h  main.cpp
common/: RpcConnection.cpp  RpcConnection.h  SerializationHeaders.h  SimpleNetworking.cpp  SimpleNetworking.h
server/: Procedures.cpp  Procedures.h  RpcConnection.cpp  RpcConnection.h  main.cpp
